# sqlite-opus

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  example_usage.py  fastapi_usage.py  pyproject.toml
sqlite_opus/: __init__.py  app.py  config.py  core.py  database.py  routes.py
sqlite_opus/static/: app.js  style.css
sqlite_opus/templates/: index.html
sqlite_opus/templates/sqlite_opus/: index.html
sqlite_opus/templates/sqlite_opus/partials/: query_results.html  table_columns.html  table_indexes.html  table_info.html  table_schema.html
tests/: __init__.py
