[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-opus"
version = "0.2.1"
description = "A Flask-based web dashboard for SQLite database query and management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "hungle2048@gmail.com"}
]
keywords = ["flask", "sqlite3", "database", "dashboard", "query", "web-interface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]

dependencies = [
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "paginate>=0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0"
]

[project.urls]
Homepage = "https://github.com/hungle00/sqlite-opus"
Documentation = "https://github.com/hungle00/sqlite-opus#readme"
Repository = "https://github.com/hungle00/sqlite-opus"
Issues = "https://github.com/hungle00/sqlite-opus/issues"

[tool.setuptools]
packages = ["sqlite_opus"]

[tool.setuptools.package-data]
"sqlite_opus" = [
    "templates/**/*",
    "static/**/*",
    "*.txt",
    "*.md"
]
